# aulias

./: Cargo.toml  README.md
src/: args_parser.rs  aulias.rs  lib.rs  main.rs  store.rs
