[package]
name = "aulias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
itertools = "0.10.3"
shellexpand = "2.1.0"

[[bin]]
name = "aulias"
path = "src/bin/aulias.rs"

[[bin]]
name = "unaulias"
path = "src/bin/unaulias.rs"
